<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/payFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_pay" />

    <!-- Placeholder for FAB -->
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />

</menu>
